--- a/project.html
+++ b/project.html
@@ -4,7 +4,9 @@
     <title>Home</title>
     <body>
     <div>
-    <p>ณัฏฐ์ เพิ่มกิตติกุล</p>
+    <p>ณัฏฐ์ เพิ่มกิตติกุล
+        อานุภาพ อนุรักษ์สยาม
+    </p>
 </div>
 </body>
 </html>
